--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,36 @@
 body {
     font-family: 'Times New Roman', Times, serif;
     background-color: burlywood;
-    margin:2%;
-    padding:1 rem;
+    margin:5%
+}
+
+h1 {
+    font-size:30px;
+    font-weight: bold;
+    text-align: center;
+}
+
+legend{
+    text-align: center;
+}
+
+fieldset {
+    border-color: black;
 }
 
 .forminput {
     width:95%;
     font-size:12px;
     padding: 3px 5px;
-    border: 1px cornflowerblue;
     border-radius:5px;
     padding:1rem;
+    margin-bottom: 2%;
 }
 
+#button {
+    padding:5px 10px;
+    border-radius: 30px 30px;
+    background-color:blanchedalmond;
+    box-sizing:border-box;
+    width: 100%;
+}
