--- a/css/style.css
+++ b/css/style.css
@@ -18,19 +18,39 @@ fieldset {
     border-color: black;
 }
 
-.forminput {
-    width:95%;
+form {
+    margin:0 auto;
+    width: 95%;
+    max-width: 300px;
+    padding: 1rem;
+    border: 1px black;
+}
+
+label {
+    display: block;
+    margin-bottom: 1rem;
+}
+
+.forminput,
+#button {
+    width: 95%;
     font-size:12px;
-    padding: 3px 5px;
-    border-radius:5px;
-    padding:1rem;
+    border-radius:30px 30px;
+    padding:5px 10px;
     margin-bottom: 2%;
 }
 
 #button {
-    padding:5px 10px;
-    border-radius: 30px 30px;
     background-color:blanchedalmond;
-    box-sizing:border-box;
-    width: 100%;
+}
+
+@media (min-width: 650px) {
+    form {
+        max-width:95%;
+    }
+    .forminput,
+    button {
+        width:93%;
+    }
+
 }
